Third version of final project for review - Virtual Threads introduced